--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to ImpactStart</h1>
+    <h1>Welcome to Impact from the Start</h1>
 </body>
 </html>
