--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <!-- ANIMATION CONTAINER -->
                     <div class="animation-container animation-fade-left" data-animation-delay="600"> 
                        
-                        <p class="subline">We're working on our new website. Join our newsletter and get notifed.</p>
+                        <p class="subline">We're working on our new website. Join our newsletter and get notified.</p>
                         
                     </div>
                     <!-- /ANIMATION CONTAINER -->
