--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
         <!-- PAGE TITLE -->
-        <title>Coming Soon</title>
+        <title>Launch - Coming Soon</title>
 
         <!-- FAVICON -->
         <link rel="shortcut icon" href="assets/img/favicon.png">
@@ -81,7 +81,7 @@
                     <!-- ANIMATION CONTAINER -->
                     <div class="animation-container animation-fade-left" data-animation-delay="600"> 
                        
-                        <p class="subline">We're working on our new website. Join our newsletter and get notified.</p>
+                        <p class="subline">We're working on our new website. Join our newsletter and get notifed.</p>
                         
                     </div>
                     <!-- /ANIMATION CONTAINER -->
