--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Eventually
+	Coming Soon
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Eventually</title>
+		<title>Coming Soon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -38,8 +38,6 @@
 					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
-
-		<!-- Scripts -->
 		
 
 	</body>
