--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		<title>Coming Soon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
+				<h1>Coming Soon</h1>
 				<p>A simple template for telling the world when you'll launch<br />
 				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
 			</header>
