--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Coming Soon</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<p>We're working on something amazing! Stay tuned as we build a website that truly represents our mission and cause.</p>
 			</header>
 
 		<!-- Signup Form -->
