--- a/index.html
+++ b/index.html
@@ -41,3 +41,10 @@
 
 	</body>
 </html>
+body {
+    background-image: url("../images/bg01.jpg"); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
