--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</body>
 </html>
 body {
-    background-image: url("../images/bg01.jpg"); 
+    background-image: url(https://impactstart.org/assets/images/bg01.jpg); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
