--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
-    <link rel="stylesheet" href="css/main.css"> <!-- Link to CSS file -->
-</head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Coming Soon</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+    </head>
+    <body class="is-preload">
 
-    <section class="hero">
-        <h1>Welcome to Our Website</h1>
-        <p>We are glad to have you here!</p>
-        <button>Learn More</button>
-    </section>
+        <!-- Header -->
+        <header id="header">
+            <h1>Coming Soon</h1>
+            <p>We're working on something amazing! Stay tuned as we build a website that truly represents our mission and cause.</p>
+        </header>
 
-    <footer>
-        <p>&copy; 2025 Your Website. All rights reserved.</p>
-    </footer>
-</body>
+        <!-- Signup Form -->
+        <form id="signup-form" method="post" action="#">
+            <input type="email" name="email" id="email" placeholder="Email Address" />
+            <input type="submit" value="Sign Up" />
+        </form>
+
+        <!-- Footer -->
+        <footer id="footer">
+            <ul class="icons">
+                <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+            </ul>
+            <ul class="copyright">
+                <li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </footer>
+
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
