--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
+				<h1>Coming Soon</h1>
 				<p>We're working on something amazing! Stay tuned as we build a website that truly represents our mission and cause.</p>
 			</header>
 
