--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<header id="header">
 				<h1>Coming Soon</h1>
 				<p>We're working on something amazing! Stay tuned as we build a website that truly represents our mission and cause.</p>
+				<img src="assets/images/bg01.jpg"
 			</header>
 
 		<!-- Signup Form -->
