--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Nonprofit for Children - Coming Soon. Stay tuned for our launch!">
-    <title>Coming Soon - Nonprofit for Children</title>
+    <meta name="description" content="Impact from the Start - Coming Soon. Stay tuned for our launch!">
+    <title>Coming Soon - Impact from the Start</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -31,7 +31,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2025 Nonprofit for Children</p>
+            <p>&copy; 2025 Impact from Start</p>
         </footer>
     </div>
 
