--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
 
         <section class="image-section">
-            <img src="https://via.placeholder.com/600x400?text=Image+Placeholder" alt="Placeholder image for children's development" class="main-image">
+            <img src="images/image-01.jpg" alt="Placeholder image for children's development" class="main-image">
         </section>
 
         <section class="subscription-form">
