--- a/index.html
+++ b/index.html
@@ -23,11 +23,33 @@
         <section class="subscription-form">
             <h2>Stay Updated!</h2>
             <p>Enter your email to be the first to know when we launch.</p>
-            <form action="#" method="POST" class="email-form">
+            <form id="subscribeForm" action="#" method="POST" class="email-form">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="Your email address" required aria-label="Email address">
                 <button type="submit">Subscribe</button>
             </form>
+            <script>
+document.getElementById('subscribeForm').addEventListener('submit', function(event) {
+  event.preventDefault();
+  
+  const email = document.getElementById('email').value;
+
+  fetch('https://zh0zhjkuea.execute-api.us-east-2.amazonaws.com/', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({ email: email })
+  })
+  .then(response => response.json())
+  .then(data => {
+    alert(data.message); // Display success message
+  })
+  .catch(error => {
+    alert('There was an error subscribing. Please try again later.');
+  });
+});
+</script>
         </section>
 
         <footer>
