--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="Impact, Start, Coming Soon, Launch">
     <meta property="og:title" content="Coming Soon - Impact from the Start">
     <meta property="og:description" content="Impact from the Start - Coming Soon. Stay tuned for our launch!">
-    <meta property="og:image" content="https://yourdomain.com/images/og-image.jpg">
-    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:image" content="https://impactstart.github.io/images/og-image.jpg">
+    <meta property="og:url" content="https://impactstart.github.io">
     <title>Coming Soon - Impact from the Start</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
