--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="subscription-form">
             <h2>Stay Updated!</h2>
             <p>Enter your email to be the first to know when we launch.</p>
-            <form id="subscribeForm" action="#" method="POST" class="email-form">
+            <form id="subscribeForm" action="https://tv7h471wj4.execute-api.us-west-1.amazonaws.com/EmailSubscription" method="POST" class="email-form">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="Your email address" required aria-label="Email address">
                 <button type="submit">Subscribe</button>
