--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <title>Coming Soon - Impact from the Start</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -40,5 +39,7 @@
             <p>&copy; 2025 Impact from Start</p>
         </footer>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
