--- a/index.html
+++ b/index.html
@@ -25,21 +25,25 @@
             <img src="images/image-01.jpg" alt="Placeholder image for children's development" class="main-image">
         </section>
 
-        <section class="subscription-form">
-            <h2>Stay Updated!</h2>
-            <p>Enter your email to be the first to know when we launch.</p>
-            <form id="subscribeForm" action="https://zh0zhjkuea.execute-api.us-east-2.amazonaws.com/EmailSubscription" method="POST" class="email-form">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Your email address" required aria-label="Email address">
-                <button type="submit">Subscribe</button>
-            </form>
-        </section>
+        <!-- Add your JavaScript here -->
+        <script>
+        const email = 'test@example.com'; // Replace with actual email value
 
-        <footer>
-            <p>&copy; 2025 Impact from Start</p>
-        </footer>
+        fetch('https://your-new-api-id.execute-api.us-west-2.amazonaws.com/EmailSubscription', {  // Replace URL with the correct one
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ email: email })
+        })
+        .then(response => response.json())
+        .then(data => {
+            alert(data.message); // Display success message
+        })
+        .catch(error => {
+            alert('There was an error subscribing. Please try again later.');
+        });
+        </script>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
