--- a/index.html
+++ b/index.html
@@ -32,28 +32,23 @@
         </form>
 
         <!-- Add your JavaScript here -->
-        <script>
-        document.getElementById('subscriptionForm').addEventListener('submit', function(event) {
-            event.preventDefault();  // Prevent the form from reloading the page
+       <script>
+fetch('https://tv7h471wj4.execute-api.us-west-1.amazonaws.com/EmailSubscription', {
+    method: 'POST',
+    headers: {
+        'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({ email: email })
+})
+.then(response => response.json())
+.then(data => {
+    alert(data.message); // Display success message
+})
+.catch(error => {
+    alert('There was an error subscribing. Please try again later.');
+});
+</script>
 
-            const email = document.getElementById('emailInput').value;  // Get email from the input field
-
-            fetch('https://your-new-api-id.execute-api.us-west-1.amazonaws.com/EmailSubscription', {  // Replace with your API URL
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ email: email })
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert(data.message); // Display success message
-            })
-            .catch(error => {
-                alert('There was an error subscribing. Please try again later.');
-            });
-        });
-        </script>
     </div>
 </body>
 </html>
