--- a/index.html
+++ b/index.html
@@ -25,30 +25,13 @@
             <img src="images/image-01.jpg" alt="Placeholder image for children's development" class="main-image">
         </section>
 
-        <!-- Add your form here for email subscription -->
-        <form id="subscriptionForm">
-            <input type="email" id="emailInput" placeholder="Enter your email" required>
+        <!-- Email Subscription Form -->
+        <form id="email-form">
+            <input type="email" id="email-input" placeholder="Enter your email" required>
             <button type="submit">Subscribe</button>
         </form>
-
-        <!-- Add your JavaScript here -->
-       <script>
-fetch('https://tv7h471wj4.execute-api.us-west-1.amazonaws.com/EmailSubscription', {
-    method: 'POST',
-    headers: {
-        'Content-Type': 'application/json'
-    },
-    body: JSON.stringify({ email: email })
-})
-.then(response => response.json())
-.then(data => {
-    alert(data.message); // Display success message
-})
-.catch(error => {
-    alert('There was an error subscribing. Please try again later.');
-});
-</script>
-
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
