--- a/index.html
+++ b/index.html
@@ -3,35 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Impact from the Start - Coming Soon. Stay tuned for our launch!">
-    <meta name="keywords" content="Impact, Start, Coming Soon, Launch">
-    <meta property="og:title" content="Coming Soon - Impact from the Start">
-    <meta property="og:description" content="Impact from the Start - Coming Soon. Stay tuned for our launch!">
-    <meta property="og:image" content="https://impactstart.github.io/images/og-image.jpg">
-    <meta property="og:url" content="https://impactstart.github.io">
-    <title>Coming Soon - Impact from the Start</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Subscribe Form</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1 class="title">Coming Soon</h1>
-            <p class="subheading">We are working on the website, so stay tuned!</p>
-        </header>
 
-        <section class="image-section">
-            <img src="images/image-01.jpg" alt="Placeholder image for children's development" class="main-image">
-        </section>
+    <h2>Subscribe to Our Newsletter</h2>
 
-        <!-- Email Subscription Form -->
-        <form id="email-form">
-            <input type="email" id="email-input" placeholder="Enter your email" required>
-            <button type="submit">Subscribe</button>
-        </form>
-    </div>
+    <form id="subscribeForm">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Subscribe</button>
+    </form>
 
     <script src="script.js"></script>
+
 </body>
 </html>
