--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subscribe Form</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 50px; }
-        form { display: inline-block; text-align: left; padding: 20px; border: 1px solid #ccc; border-radius: 10px; }
-        input { width: 100%; padding: 10px; margin: 10px 0; }
-        button { background: blue; color: white; padding: 10px 20px; border: none; cursor: pointer; }
-        button:hover { background: darkblue; }
-    </style>
-</head>
-<body>
+<form id="form">
+    <input type="email" id="email" placeholder="Enter your email" required>
+    <button type="submit">Subscribe</button>
+</form>
 
-    <h2>Subscribe to Our Newsletter</h2>
+<script>
+document.getElementById("form").addEventListener("submit", function(event) {
+    event.preventDefault(); // Prevent page reload
 
-    <form id="subscribeForm">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <button type="submit">Subscribe</button>
-    </form>
-
-    <script src="script.js"></script>
-
-</body>
-</html>
+    fetch('https://ez2i005mr3.execute-api.us-west-1.amazonaws.com/dev/subscribe', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ email: document.getElementById('email').value })
+    })
+    .then(response => response.json())
+    .then(data => {
+        alert('Thank you for subscribing! Please check your inbox for a confirmation email.');
+        document.getElementById('form').reset();
+    })
+    .catch(error => {
+        console.error('Error:', error);
+        alert('Something went wrong. Please try again later.');
+    });
+});
+</script>
