--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
             <div class="form-container">
                 <h2>Stay Updated</h2>
                 <p>Be the first to know about our upcoming launch and opportunities to get involved.</p>
-                <form id="subscription-form">
-                    <input type="email" id="email" placeholder="Email Address" required>
-                    <button type="submit">Join Waitlist</button>
-                </form>
+                <iframe width="100%" height="305" src="https://sibforms.com/serve/MUIFACQEXR578TIVaj507eSYcHeRHTIbLw4Cj-geDwnF_afBjHgZdyXLDZDVStamCXmOGpqK8lb8BgOneZvzAMNHtIJNMbLEQg6UdKHs-EoUUxyY6jmYFmyVzjlXw1j0L-kaFIcTbqO9hFLoQX7U07afdLYQ88rsSoxn-QdDKvA0uQgJsG8ybTRb88jbYUpNc6WDrCh2YcoS_cj2" frameborder="0" scrolling="auto" allowfullscreen style="display: block; margin-left: auto; margin-right: auto; max-width: 100%;"></iframe>
             </div>
         </div>
     </section>
@@ -28,19 +25,19 @@
         <div class="container">
             <h2>About Us</h2>
             <p>Impact from the Start is in the early stages of developing a nonprofit dedicated to supporting early childhood development. We focus on access to healthcare, maternal mental health resources, and caregiver education.</p>
-        <p>We believe that by ensuring children receive proper medical care and their caregivers are supported, we can foster healthier futures for entire families.</p>
+            <p>We believe that by ensuring children receive proper medical care and their caregivers are supported, we can foster healthier futures for entire families.</p>
 
-        <h2>Engagement & Feedback</h2>
-        <p>We’re looking for passionate individuals, families, and professionals to join our movement. Whether you’re a parent, educator, healthcare provider, or advocate, we want to hear from you. Share your ideas, get involved, and help us shape a future where every child has an equal opportunity to thrive. <b>Contact us to learn more or contribute to our growing initiative. 📩</b></p>
+            <h2>Engagement & Feedback</h2>
+            <p>We’re looking for passionate individuals, families, and professionals to join our movement. Whether you’re a parent, educator, healthcare provider, or advocate, we want to hear from you. Share your ideas, get involved, and help us shape a future where every child has an equal opportunity to thrive. <b>Contact us to learn more or contribute to our growing initiative. 📩</b></p>
 
-        <h2>Transparency & Growth</h2>
-        <p>We’re a small, dedicated team working hard to bring this vision to life. As we grow, we appreciate your support, ideas, and patience. Your involvement will help us make a meaningful impact.</p>
+            <h2>Transparency & Growth</h2>
+            <p>We’re a small, dedicated team working hard to bring this vision to life. As we grow, we appreciate your support, ideas, and patience. Your involvement will help us make a meaningful impact.</p>
 
-        <h2>Personal Connection</h2>
-        <p>Impact from the Start was created because I believe that early childhood development starts with proper healthcare and strong caregiver relationships. As someone passionate about children's well-being, I want to make sure families have the resources they need—starting before birth. This mission is deeply personal, and I’m committed to making change happen.</p>
-    </div>
-</section>
+            <h2>Personal Connection</h2>
+            <p>Impact from the Start was created because I believe that early childhood development starts with proper healthcare and strong caregiver relationships. As someone passionate about children's well-being, I want to make sure families have the resources they need—starting before birth. This mission is deeply personal, and I’m committed to making change happen.</p>
+        </div>
+    </section>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
