--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="form-container">
                 <h2>Stay Updated</h2>
                 <p>Be the first to know about our upcoming launch and opportunities to get involved.</p>
-                <iframe width="100%" height="305" src="https://sibforms.com/serve/MUIFACQEXR578TIVaj507eSYcHeRHTIbLw4Cj-geDwnF_afBjHgZdyXLDZDVStamCXmOGpqK8lb8BgOneZvzAMNHtIJNMbLEQg6UdKHs-EoUUxyY6jmYFmyVzjlXw1j0L-kaFIcTbqO9hFLoQX7U07afdLYQ88rsSoxn-QdDKvA0uQgJsG8ybTRb88jbYUpNc6WDrCh2YcoS_cj2" frameborder="0" scrolling="auto" allowfullscreen style="display: block; margin-left: auto; margin-right: auto; max-width: 100%;"></iframe>
+                <iframe src="https://www.w3schools.com"></iframe>" frameborder="0" scrolling="auto" allowfullscreen style="display: block; margin-left: auto; margin-right: auto; max-width: 100%;"></iframe>
             </div>
         </div>
     </section>
