--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="form-container">
                 <h2>Stay Updated</h2>
                 <p>Be the first to know about our upcoming launch and opportunities to get involved.</p>
-                <iframe src="https://www.w3schools.com"></iframe>" frameborder="0" scrolling="auto" allowfullscreen style="display: block; margin-left: auto; margin-right: auto; max-width: 100%;"></iframe>
+                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
             </div>
         </div>
     </section>
