--- a/index.html
+++ b/index.html
@@ -1,80 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Impact from the Start</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ImpactStart Nonprofit</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="hero">
-        <h1>Every child deserves a strong start in life.</h1>
-        <p>We're building a movement to ensure access to healthcare, caregiver support, and early childhood development resources—because a child’s future starts before birth.</p>
+        <div class="hero-content">
+            <h1>Welcome to ImpactStart!</h1>
+            <p>Documenting the journey of starting a nonprofit for positive change.</p>
+            </div>
     </header>
 
-    <section class="waitlist">
-        <div class="container">
-            <div class="form-container">
-                <h2>Stay Updated</h2>
-                <p>Be the first to know about our upcoming launch and opportunities to get involved.</p>
-                <form id="subscriptionForm">
-                    <label for="email">Enter your email address:</label>
-                    <input type="email" id="email" name="email" required>
-                    <button type="submit">Subscribe</button>
-                    <div id="subscriptionMessage"></div>
-                </form>
-            </div>
-        </div>
+    <section class="section">
+        <h2>About Our Mission</h2>
+        <p>Here you can write a compelling paragraph about the mission of your future nonprofit. What problem are you trying to solve? What impact do you hope to make?</p>
     </section>
 
-    <section class="about-us">
-        <div class="container">
-            <h2>About Us</h2>
-            <p>Impact from the Start is in the early stages of developing a nonprofit dedicated to supporting early childhood development. We focus on access to healthcare, maternal mental health resources, and caregiver education.</p>
-            <p>We believe that by ensuring children receive proper medical care and their caregivers are supported, we can foster healthier futures for entire families.</p>
-
-            <h2>Engagement & Feedback</h2>
-            <p>We’re looking for passionate individuals, families, and professionals to join our movement. Whether you’re a parent, educator, healthcare provider, or advocate, we want to hear from you. Share your ideas, get involved, and help us shape a future where every child has an equal opportunity to thrive. <b>Contact us to learn more or contribute to our growing initiative. 📩</b></p>
-
-            <h2>Transparency & Growth</h2>
-            <p>We’re a small, dedicated team working hard to bring this vision to life. As we grow, we appreciate your support, ideas, and patience. Your involvement will help us make a meaningful impact.</p>
-
-            <h2>Personal Connection</h2>
-            <p>Impact from the Start was created because I believe that early childhood development starts with proper healthcare and strong caregiver relationships. As someone passionate about children's well-being, I want to make sure families have the resources they need—starting before birth. This mission is deeply personal, and I’m committed to making change happen.</p>
-        </div>
+    <section class="section process">
+        <h2>The Process So Far</h2>
+        <p>Share the steps you've taken on your journey to start this nonprofit. This could include research, planning, legal work, community outreach, etc.</p>
+        <ul>
+            <li>Step 1: [Describe the first step]</li>
+            <li>Step 2: [Describe the second step]</li>
+            <li>Step 3: [Describe the third step]</li>
+            </ul>
     </section>
 
-    <script>
-        document.getElementById('subscriptionForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent the default form submission
+    <section class="section updates">
+        <h2>Stay Updated</h2>
+        <p>Let people know how they can stay informed about your progress. You could mention social media, future email updates, or other ways to connect.</p>
+        </section>
 
-            const emailInput = document.getElementById('email');
-            const email = emailInput.value;
-            const messageDiv = document.getElementById('subscriptionMessage');
+    <footer>
+        <p>&copy; 2025 ImpactStart</p>
+    </footer>
 
-            // Basic client-side email validation (you might want a more robust solution)
-            if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
-                messageDiv.textContent = 'Please enter a valid email address.';
-                return;
-            }
-
-            // Send an AJAX request to your backend
-            fetch('/api/subscribe', { // This is the endpoint your Node.js backend will handle
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ email: email }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                messageDiv.textContent = data.message || 'Subscription successful! Please check your inbox for a welcome email.';
-                emailInput.value = ''; // Clear the input field
-            })
-            .catch(error => {
-                console.error('Error subscribing:', error);
-                messageDiv.textContent = 'An error occurred. Please try again later.';
-            });
-        });
-    </script>
 </body>
 </html>
