--- a/index.html
+++ b/index.html
@@ -9,30 +9,27 @@
 <body>
     <header class="hero">
         <div class="hero-content">
-            <h1>Welcome to ImpactStart!</h1>
-            <p>Documenting the journey of starting a nonprofit for positive change.</p>
+            <h1>Every child deserves a strong start in life.</h1>
+            <p>We're building a movement to ensure access to healthcare, caregiver support, and early childhood development resources—because a child’s future starts before birth.</p>
             </div>
     </header>
 
     <section class="section">
-        <h2>About Our Mission</h2>
-        <p>Here you can write a compelling paragraph about the mission of your future nonprofit. What problem are you trying to solve? What impact do you hope to make?</p>
+        <h2>About Us</h2>
+        <p>Impact from the Start is in the early stages of developing a nonprofit dedicated to supporting early childhood development through access to healthcare, maternal mental health resources, and caregiver education. We believe that by ensuring children receive proper medical care and their caregivers are supported, we can foster healthier futures for entire families.</p>
     </section>
 
     <section class="section process">
-        <h2>The Process So Far</h2>
-        <p>Share the steps you've taken on your journey to start this nonprofit. This could include research, planning, legal work, community outreach, etc.</p>
-        <ul>
-            <li>Step 1: [Describe the first step]</li>
-            <li>Step 2: [Describe the second step]</li>
-            <li>Step 3: [Describe the third step]</li>
-            </ul>
+        <h2>Engagement & Feedback</h2>
+        <p>We’re looking for passionate individuals, families, and professionals to join our movement. Whether you’re a parent, educator, healthcare provider, or advocate, we want to hear from you. Share your ideas, get involved, and help us shape a future where every child has an equal opportunity to thrive.</p>
+        <p>📩 Contact us to learn more or contribute to our growing initiative.</p>
     </section>
 
     <section class="section updates">
-        <h2>Stay Updated</h2>
-        <p>Let people know how they can stay informed about your progress. You could mention social media, future email updates, or other ways to connect.</p>
-        </section>
+        <h2>Our Story</h2>
+        <p>We’re a small, dedicated team working hard to bring this vision to life. As we grow, we appreciate your support, ideas, and patience. Your involvement will help us make a meaningful impact.</p>
+        <p>Impact from the Start was created because I believe that early childhood development starts with proper healthcare and strong caregiver relationships. As someone passionate about children's well-being, I want to make sure families have the resources they need—starting before birth. This mission is deeply personal, and I’m committed to making change happen.</p>
+    </section>
 
     <footer>
         <p>&copy; 2025 ImpactStart</p>
