--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="section process">
         <h2>Engagement & Feedback</h2>
         <p>We’re looking for passionate individuals, families, and professionals to join our movement. Whether you’re a parent, educator, healthcare provider, or advocate, we want to hear from you. Share your ideas, get involved, and help us shape a future where every child has an equal opportunity to thrive.</p>
-        <p>📩 Contact us to learn more or contribute to our growing initiative.</p>
+        <p>We are currently developing ways for you to get in touch. Stay tuned for updates on how you can contact us to learn more or contribute to our growing initiative.</p>
     </section>
 
     <section class="section updates">
