--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="hero">
         <div class="hero-content">
             <h1>Every child deserves a strong start in life.</h1>
             <p>We're building a movement to ensure access to healthcare, caregiver support, and early childhood development resources—because a child’s future starts before birth.</p>
-            </div>
+        </div>
     </header>
 
     <section class="section">
