--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section class="section updates">
         <h2>Our Story</h2>
-        <p>We’re a small, dedicated team working hard to bring this vision to life. As we grow, we appreciate your support, ideas, and patience. Your involvement will help us make a meaningful impact.</p>
+        <p>Currently, Impact from the Start is led by one dedicated individual working hard to bring this vision to life. As the initiative grows, your support, ideas, and patience are greatly appreciated. Your involvement will help make a meaningful impact.</p>
         <p>Impact from the Start was created because I believe that early childhood development starts with proper healthcare and strong caregiver relationships. As someone passionate about children's well-being, I want to make sure families have the resources they need—starting before birth. This mission is deeply personal, and I’m committed to making change happen.</p>
     </section>
 
